shellfirm/tests/snapshots/checks__kubernetes-strict-apply_resource.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
---
[
    TestSensitivePatternsResult {
        file_path: "kubernetes-strict-apply_resource.yaml",
        test: "kubectl apply -f deployment.yaml",
        check_detection_ids: [
            "kubernetes-strict:require_context",
            "kubernetes-strict:apply_resource",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "kubernetes-strict-apply_resource.yaml",
        test: "k apply -f config.yaml",
        check_detection_ids: [
            "kubernetes-strict:require_context",
            "kubernetes-strict:apply_resource",
        ],
        test_description: "match command with k alias",
    },
    TestSensitivePatternsResult {
        file_path: "kubernetes-strict-apply_resource.yaml",
        test: "kubectl   apply   --filename   resource.yaml",
        check_detection_ids: [
            "kubernetes-strict:require_context",
            "kubernetes-strict:apply_resource",
        ],
        test_description: "match command with extra spaces",
    },
    TestSensitivePatternsResult {
        file_path: "kubernetes-strict-apply_resource.yaml",
        test: "kubectl get deployments",
        check_detection_ids: [
            "kubernetes-strict:require_context",
        ],
        test_description: "different command",
    },
]
