shellfirm/tests/snapshots/checks__kubernetes-strict-change_resource_size.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
---
[
    TestSensitivePatternsResult {
        file_path: "kubernetes-strict-change_resource_size.yaml",
        test: "k scale",
        check_detection_ids: [
            "kubernetes-strict:require_context",
            "kubernetes-strict:change_resource_size",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "kubernetes-strict-change_resource_size.yaml",
        test: "kubectl   scale",
        check_detection_ids: [
            "kubernetes-strict:require_context",
            "kubernetes-strict:change_resource_size",
        ],
        test_description: "match command with spaces",
    },
    TestSensitivePatternsResult {
        file_path: "kubernetes-strict-change_resource_size.yaml",
        test: "kubectll scale",
        check_detection_ids: [],
        test_description: "invalid command",
    },
]
